--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "typings": "bin/index",
   "scripts": {
     "clean": "rimraf bin/*",
-    "build": "npm run clean && npm up && tsc",
-    "b": "npm run build",
-    "prepublishOnly": "npm version patch && npm run build",
-    "p": "npm publish --access public"
+    "build": "yarn run clean && yarn && tsc",
+    "b": "yarn run build",
+    "prepublishOnly": "yarn version patch && yarn run build",
+    "p": "yarn publish --access public"
   },
   "keywords": [],
   "author": "MyBestBook.NET",
@@ -20,7 +20,6 @@
   "devDependencies": {
     "@types/express": "^4.11.0",
     "@types/jsonwebtoken": "^7.2.5",
-    "@types/node": "^8.5.9",
     "@types/passport": "^0.4.2",
     "@types/passport-facebook": "^2.1.7",
     "@types/passport-google-oauth": "^1.0.37",
@@ -28,11 +27,11 @@
     "@types/reflect-metadata": "0.0.5",
     "@types/request": "^2.0.13",
     "@types/request-promise-native": "^1.0.11",
-    "typescript": "^2.6.2"
+    "typescript": "^2.7.1"
   },
   "dependencies": {
-    "@tm/lib.common": "git+ssh://git@github.com/thanhptr/tm.lib.common.git",
-    "@tm/lib.service": "git+ssh://git@github.com/thanhptr/tm.lib.service.git",
+    "@tm/lib.common": "thanhptr/tm.lib.common",
+    "@tm/lib.service": "thanhptr/tm.lib.service",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "passport": "^0.4.0",
