--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "dependencies": {
     "@gtm/lib.common": "^1.0.9",
     "@gtm/lib.service": "^1.0.2",
+    "@types/lodash": "^4.14.102",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.5",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
