--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/thanhptr/gtm.lib.service.auth.git"
   },
   "devDependencies": {
+    "@types/bson": "^1.0.6",
     "@types/express": "^4.11.1",
     "@types/jsonwebtoken": "^7.2.5",
     "@types/lodash": "^4.14.102",
@@ -32,7 +33,8 @@
   },
   "dependencies": {
     "@gtm/lib.common": "^1.0.9",
-    "@gtm/lib.service": "^1.0.6",
+    "@gtm/lib.service": "^1.0.7",
+    "bson": "^1.0.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.5",
